# PawPad

./: .gitmodules  Cargo.toml  README.md
convert_sdl/: Cargo.toml
convert_sdl/src/: main.rs
examples/: pawpad_mappings.json  simple.rs
src/: lib.rs  main.rs
src/backend/: guid.rs  mod.rs
src/backend/evdev/: mod.rs
src/backend/hid/: mod.rs
src/backend/hid/driver/: eightbitdo.rs  mod.rs  unknown.rs
src/backend/hid/report_descriptor/: local.rs  mod.rs
src/backend/hid/report_descriptor/global/: mod.rs  unit.rs
src/backend/hid/report_descriptor/local/: mod.rs
src/backend/hid/report_descriptor/main/: collection.rs  input_output.rs  mod.rs
src/gamepad/: axis.rs  button.rs  mod.rs  pointer.rs  sensor.rs
src/mapping/: device_id.rs  hat.rs  mod.rs
